--- a/ollama/ollama-model-on-pv.yaml
+++ b/ollama/ollama-model-on-pv.yaml
@@ -1,17 +1,27 @@
 apiVersion: v1
 kind: Pod
 metadata:
- name: streamlit
+ name: ollama-model-on-pv
  namespace: default
 spec:
  hostNetwork: true
  hostIPC: true
  containers:
- - name: streamlit
-   image: localhost/streamlit:v0.0.2
+ - name: ollama-model-on-pv
+   image: localhost/ollama-source-build:v0.0.2
    imagePullPolicy: Never
+   resources:
+      limits:
+        nvidia.com/gpu: 1
    command: [ "/bin/bash", "-c", "--" ]       # You need to run some task inside a container to keep it running
    args: [ "while true; do sleep 10; done;" ]
+   volumeMounts:
+   - name: ollama-storage
+     mountPath: /root/.ollama
+ volumes:
+ - name: ollama-storage
+   persistentVolumeClaim:
+     claimName: pvc-volume1-size16
  restartPolicy: Never
  tolerations:
  - key: "key"
