move big storage on new ssd /dev/nvme0n1

--- a/ollama/ollama-model-on-pv.yaml
+++ b/ollama/ollama-model-on-pv.yaml
@@ -21,7 +21,7 @@ spec:
  volumes:
  - name: ollama-storage
    persistentVolumeClaim:
-     claimName: pvc-volume1-size128
+     claimName: pvc-ollama
  restartPolicy: Never
  tolerations:
  - key: "key"
