--- a/ollama/pvc-ollama.yaml
+++ b/ollama/pvc-ollama.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pvc-volume1-size128
+  name: pvc-ollama
 spec:
   storageClassName: manual
   accessModes:
