--- a/stable-diffusion/pv-stable-diffusion.yaml
+++ b/stable-diffusion/pv-stable-diffusion.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pv-volume2-size128
+  name: pv-stable-diffusion
   labels:
     type: local
 spec:
   storageClassName: manual
   capacity:
-    storage: 128Gi
+    storage: 256Gi
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: "/home/wyou/pv/volume2-size128"
+    path: "/run/media/wyou/data/pvs/pv-stable-diffusion"
