--- a/stable-diffusion/pvc-stable-diffusion.yaml
+++ b/stable-diffusion/pvc-stable-diffusion.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pvc-volume2-size128
+  name: pvc-stable-diffusion
 spec:
   storageClassName: manual
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 128Gi
+      storage: 256Gi
