--- a/stable-diffusion/stable-diffusion.yaml
+++ b/stable-diffusion/stable-diffusion.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Pod
 metadata:
- name: ollama-base
+ name: stable-diffusion
  namespace: default
 spec:
  hostNetwork: true
  hostIPC: true
  containers:
- - name: ollama-base
-   image: docker.io/ollama/ollama
+ - name: stable-diffusion
+   image: localhost/diffuser-pytorch-cuda:v0.0.3
    imagePullPolicy: Never
    resources:
       limits:
@@ -16,11 +16,12 @@ spec:
    command: [ "/bin/bash", "-c", "--" ]       # You need to run some task inside a container to keep it running
    args: [ "while true; do sleep 10; done;" ]
    volumeMounts:
-   - name: ollama-storage
-     mountPath: /root/.ollama
+   - name: stable-diffusion-storage
+     mountPath: /home/stable-diffusion-storage
  volumes:
- - name: ollama-storage
-   emptyDir: {}
+ - name: stable-diffusion-storage
+   persistentVolumeClaim:
+     claimName: pvc-stable-diffusion
  restartPolicy: Never
  tolerations:
  - key: "key"
