--- a/fedora/fedora-devel-worknode.yaml
+++ b/fedora/fedora-devel-worknode.yaml
@@ -1,15 +1,16 @@
 apiVersion: v1
 kind: Pod
 metadata:
- name: fedora-work-node
+ name: fedora-devel-worknode
  namespace: default
 spec:
  #hostNetwork: true
  hostIPC: true
  nodeName: vfanny
  containers:
- - name: fedora
-   image: docker.io/library/fedora
+ - name: fedora-devel
+   #image: docker.io/library/fedora
+   image: localhost/fedora-devel:v0.0.1
    imagePullPolicy: Never
    securityContext:
      privileged: true
